--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react-native-reanimated": "^3.3.0-nightly-20230603-663ee7492",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.7",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -39,6 +43,7 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "redux-devtools": "^3.7.0",
     "typescript": "4.8.4"
   },
   "jest": {
