--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,9 +93,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.rnboilerplate"
+    namespace "com.RNStudy"
     defaultConfig {
-        applicationId "com.rnboilerplate"
+        applicationId "com.RNStudy"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
